--- a/survey/end.html
+++ b/survey/end.html
@@ -9,7 +9,9 @@
 <body>
     <div class="survey-container">
         <div class="title">實驗結束</div>
-        <h3>感謝您的參與，實驗已經結束，請等待上傳結束消息出現後，關閉網頁即可</h3>
+        <div id = 'result' class="content red-font">
+            <h3>感謝您的參與，實驗結果仍在上傳中，請勿離開網頁</h3>
+        </div>
         <div class="instruction">
             中原大學心理學系暨心理學研究所 
             ｜ 指導教授：洪福建 博士 （email：hfc@cycu.edu.tw） <br>
