--- a/survey/baseLEC5.html
+++ b/survey/baseLEC5.html
@@ -123,13 +123,14 @@
         <h2>第一部分</h2>
         <div class="instruction">
             <p>填答說明:下面列出了若干有時會發生在人們身上的困難或壓力事件。請針對每項事件勾選右方符合的欄位</p>
-            <p>(a)該事件發生在你個人身上;</p>
-            <p>(b)你親眼目睹該事件發生在他人身上;</p>
-            <p>(c)你得知該事件發生在關係密切的親人或親近的朋友身上;</p>
-            <p>(d)你是作為工作的一部分而接觸該事件(例如:醫務輔助人員[如緊急救護技術員/EMT]、警察、軍人、或其他第一線應變人員);</p>
-            <p>(e)你不確定該事件是否符合;</p>
-            <p>(f)該事件對你不適用。</p>
-            <p>當你填答下列所有事件時,請務必考量你整個人生期間(成長過程與成人時期)。</p>
+            <h4>(a)該事件發生在你個人身上;</h4>
+            <h4>(b)你親眼目睹該事件發生在他人身上;</h4>
+            <h4>(c)你得知該事件發生在關係密切的親人或親近的朋友身上;</h4>
+            <h4>(d)你是作為工作的一部分而接觸該事件(例如:醫務輔助人員[如緊急救護技術員/EMT]、警察、軍人、或其他第一線應變人員);</h4>
+            <h4>(e)你不確定該事件是否符合;</h4>
+            <h4>(f)該事件對你不適用。</h4>
+            <h4>※ 當你填答下列所有事件時,請務必考量你整個人生期間(成長過程與成人時期)。</h4>
+            <p>§本問卷改編自 LEC-5 中文版，由龔怡文、蘇逸人、黃玉蓮翻譯。本研究已取得授權使用。</p>
         </div>
         <div class ="suggest">每題必選,可複選（每題 a~e 的選項不與 f 同時選取）</div>
         
