--- a/survey/niptIptPDS5.html
+++ b/survey/niptIptPDS5.html
@@ -10,7 +10,8 @@
     <div class="survey-container">
         <div class="title">我們經歷重大生活壓力事件後有時會出現下列情形，以下的題目請根據前面【生活事件檢核表】中，所選出相對上最困擾你的那一項生活壓力事件	或	唯一經歷的生活壓力事件對每個問題給予評分。</div>
         <div class="instruction">
-            請仔細閱讀每一項陳述，圈選最能夠描述『過去一個月』期間，這項問題多常發生與對你造成多大困擾的數字。舉例來說，如果你過去一個月與朋友談論創傷一次，你的反應會如同以下結果：「一週1次或更少/有一點」（因為前一個月一次比一週一次來得少）	
+            <h4>請仔細閱讀每一項陳述，圈選最能夠描述『過去一個月』期間，這項問題多常發生與對你造成多大困擾的數字。舉例來說，如果你過去一個月與朋友談論創傷一次，你的反應會如同以下結果：「一週1次或更少/有一點」（因為前一個月一次比一週一次來得少）</h4>
+            <p>§本中文版問卷經蘇逸人教授授權使用。</p>	
         </div>
         <form id="niptiptForm">
             <table>
@@ -391,7 +392,7 @@
             
             <div class="title">我們想瞭解您在經歷【⽣活事件檢核表】中的事件後可能持有的想法。以下的題⽬請根據前⾯【創傷⽣活事件檢核】中，所選出相對上最困擾您的那⼀項生活壓力事件 或 唯⼀經歷的生活壓力事件 對每個問題進⾏圈選。 </div>
             <div class="instruction">
-                以下列出⼀些陳述句，它們可能可以代表您的想法，但也可能不⼀樣。請仔細閱讀每個句⼦，圈選⼀個最符合您想法的選項，數字越⾼代表句⼦越符合您的想法，這些句⼦也沒有對或錯的標準答案。 
+                <h4>以下列出⼀些陳述句，它們可能可以代表您的想法，但也可能不⼀樣。請仔細閱讀每個句⼦，圈選⼀個最符合您想法的選項，數字越⾼代表句⼦越符合您的想法，這些句⼦也沒有對或錯的標準答案。</h4> 
             </div>
 
             <table>
