--- a/survey/niptIptPDS5.html
+++ b/survey/niptIptPDS5.html
@@ -11,7 +11,7 @@
         <div class="title">我們經歷重大生活壓力事件後有時會出現下列情形，以下的題目請根據前面【生活事件檢核表】中，所選出相對上最困擾你的那一項生活壓力事件	或	唯一經歷的生活壓力事件對每個問題給予評分。</div>
         <div class="instruction">
             <h4>請仔細閱讀每一項陳述，圈選最能夠描述『過去一個月』期間，這項問題多常發生與對你造成多大困擾的數字。舉例來說，如果你過去一個月與朋友談論創傷一次，你的反應會如同以下結果：「一週1次或更少/有一點」（因為前一個月一次比一週一次來得少）</h4>
-            <p>§本中文版問卷經蘇逸人教授授權使用。</p>	
+            <p>§本中文版問卷經蘇逸人博士授權使用。</p>	
         </div>
         <form id="niptiptForm">
             <table>
