--- a/survey/niptIptPDS5.html
+++ b/survey/niptIptPDS5.html
@@ -390,7 +390,7 @@
 
             <hr>
             
-            <div class="title">我們想瞭解您在經歷【⽣活事件檢核表】中的事件後可能持有的想法。以下的題⽬請根據前⾯【創傷⽣活事件檢核】中，所選出相對上最困擾您的那⼀項生活壓力事件 或 唯⼀經歷的生活壓力事件 對每個問題進⾏圈選。 </div>
+            <div class="title">我們想瞭解您在經歷【⽣活事件檢核表】中的事件後可能持有的想法。以下的題⽬請根據前⾯【⽣活事件檢核表】中，所選出相對上最困擾您的那⼀項生活壓力事件 或 唯⼀經歷的生活壓力事件 對每個問題進⾏圈選。 </div>
             <div class="instruction">
                 <h4>以下列出⼀些陳述句，它們可能可以代表您的想法，但也可能不⼀樣。請仔細閱讀每個句⼦，圈選⼀個最符合您想法的選項，數字越⾼代表句⼦越符合您的想法，這些句⼦也沒有對或錯的標準答案。</h4> 
             </div>
