--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -6,38 +6,31 @@
   
   <title>彗case-僅供預覽</title>
 
-  <!--
+  <!-- from CDN -->
   <script src="https://unpkg.com/jspsych@7.3.3"></script>
-  <script src="https://unpkg.com/@jspsych/extension-mouse-tracking@1.1.0"></script>
   <script src="https://unpkg.com/@jspsych/plugin-instructions@1.1.4"></script>
   <script src="https://unpkg.com/@jspsych/plugin-html-slider-response@1.1.3"></script>
   <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.2"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-serial-reaction-time-mouse@1.1.3"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.2"></script>
   <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.2"></script>
   <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.3"></script>
   <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
-  -->
-  
-  <!-- not use
-  <script src="local/extension-mouse-tracking@1.1.0.js"></script>
-  <script src="local/plugin-image-keyboard-response@1.1.2.js"></script>
-  <script src="local/plugin-serial-reaction-time-mouse@1.1.3.js"></script>
-  -->
-  
+
+  <!-- from github -->
+  <!--
   <script src="local/jspsych@7.3.3.js"></script>
   <script src="local/plugin-instructions@1.1.4.js"></script>
   <script src="local/plugin-html-slider-response@1.1.3.js"></script>
   <script src="local/plugin-html-keyboard-response@1.1.2.js"></script>
   <script src="local/plugin-preload@1.1.2.js"></script>
   <script src="local/plugin-survey-likert@1.1.3.js"></script>
-  <link href="experiment.css" rel="stylesheet" type="text/css" /> <!-- 禁止選取文字 和滑塊屬性-->
   <link href="local/jspsych.css" rel="stylesheet" type="text/css"/>
+  -->
+  
+  <link href="experiment.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="wrap"></div>
   <script src="../upload_logic.js"></script> <!-- 引用外部 JavaScript 文件 -->
   <script src="experiment.js"></script> <!-- jspsych main -->
-  <script src="limit.js"></script> <!-- 引用外部 JavaScript 文件 -->
 </body>
 </html>
